<resources>
    <string name="app_name">Onibus TB</string>
    <string name="imagem_principal">Imagem Principal</string>
    <string name="icone_room">icone room</string>
    <string name="descricaoPrincipal">Horários de Ônibus na palma da sua mão!</string>
    <string name="horario_urbano">Horários Urbanos</string>
    <string name="horarios_klabin">Horários Klabin</string>
    <string name="horarios_industriais">Horários Industriais</string>
    <string name="estrela_favoritos">estrela Favoritos</string>
    <string name="centro">CENTRO</string>
    <string name="nome_titulo">Ônibus TB</string>
    <string name="sobre">Sobre</string>
    <string name="teste">teste</string>
    <string name="descricao_sobre">Feito com amor, carinho e Java :)</string>
    <string name="criador">Criado por JhonathanLDP</string>
    <string name="e_mail">e-mail</string>
    <string name="git_button">git button</string>
    <string name="compartilhe">Compartilhe!</string>
    <string name="feedback">Achou um Bug? Tem sugestões? Use os botões de contato acima!</string>
    <string name="titulo_dialog">Adicionar aos Favoritos</string>
    <string name="descricao_dialog">Gostaria de adicionar esse horário aos Favoritos?</string>
    <string name="facebook_app_id">459451874225045</string>
    <string name="horarios_de_partida">Horários de partida</string>
    <string name="horarios_de_volta">Horários de volta</string>
    <string name="descricao_slide_1">Bem Vindo ao Ônibus TB!</string>
    <string name="descricao_slide2">Programe-se antes de sair de casa!</string>
    <string name="descricacao_slide3">Ache facilmente seus horários, adicionando aos favoritos</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="desc_main">NOTA: ESSE É UM APP TERCEIRO, E NÃO POSSUI NENHUM VINCULO COM EMPRESAS E/OU ORGÃOS PUBLICOS.</string>
    <string name="proximo">Avançar</string>
    <string name="pular">Pular</string>
    <string name="entendi">Ok, Entendi</string>
    <string name="dialog_desc_remove">Gostaria de remover esse horário dos favoritos?</string>
    <string-array name="selecaoTipoHorario">
        <item>Dias úteis</item>
        <item>Sábados</item>
        <item>Domingos/Feriados</item>
    </string-array>
</resources>
