<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@color/text"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@drawable/imagem_principal"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textoTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_directions_bus_white_48dp"
                android:drawableRight="@drawable/ic_directions_bus_white_48dp"
                android:text="@string/nome_titulo"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="48sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descricaoContato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/descricao_sobre"
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/descricaoCriador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/criador"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/botaoGit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/botao_estilo_contato"
                android:contentDescription="@string/git_button"
                android:src="@drawable/github"
                android:onClick="onImageClick"/>

            <ImageButton
                android:id="@+id/mailContato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/botao_estilo_contato"
                android:contentDescription="@string/e_mail"
                android:src="@drawable/ic_mail_black_48dp"
                android:onClick="onImageClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descricaoFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/compartilheCoracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botao_estilo_contato"
                android:contentDescription="@string/e_mail"
                android:src="@drawable/ic_favorite_black_48dp"
                android:onClick="onImageClick"/>

            <TextView
                android:id="@+id/descricaoCompartilhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compartilhe"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>